--- a/templates/about.html
+++ b/templates/about.html
@@ -10,10 +10,11 @@
     <h1>About Me</h1>
     <p>Hi, I'm Mark! Here's my career journey and what I'm working on now.</p>
     <nav>
-        <a href="/">Home</a> |
-        <a href="/about">About</a> |
-        <a href="/projects">Projects</a> |
-        <a href="/contact">Contact</a>
+        <a href="{{ url_for('home') }}">Home</a> |
+        <a href="{{ url_for('about') }}">About</a> |
+        <a href="{{ url_for('projects') }}">Projects</a> |
+        <a href="{{ url_for('contact') }}">Contact</a> |
+        <a href="{{ url_for('messages') }}">Messages</a>
     </nav>
 </body>
 </html>
