--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,10 +20,11 @@
     </form>
 
     <nav>
-        <a href="/">Home</a> |
-        <a href="/about">About</a> |
-        <a href="/projects">Projects</a> |
-        <a href="/contact">Contact</a>
+        <a href="{{ url_for('home') }}">Home</a> |
+        <a href="{{ url_for('about') }}">About</a> |
+        <a href="{{ url_for('projects') }}">Projects</a> |
+        <a href="{{ url_for('contact') }}">Contact</a> |
+        <a href="{{ url_for('messages') }}">Messages</a>
     </nav>
 </body>
 </html>
