--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,6 @@
     </head>
 <body>
     <h1>Welcome to My Portfolio Website!</h1>
-    <p>Hi, I'm Mark. I'm on a journey to become a backend developer!</p>
-    
-    <h2>Navigation</h2>
     <nav>
         <a href="{{ url_for('home') }}">Home</a> |
         <a href="{{ url_for('about') }}">About</a> |
@@ -18,6 +15,7 @@
         <a href="{{ url_for('contact') }}">Contact</a> |
         <a href="{{ url_for('messages') }}">Messages</a>
     </nav>
+    <p>Hi, I'm Mark. I'm on a new journey to become a backend and eventually a full stack developer!</p
 
     <h2>What You'll Find Here</h2>
     <p>This portfolio showcases my backend development journey. Check out the <a href="/projects">Projects</a> section to see what I’ve built!</p>
