--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <h1>Welcome to My Portfolio Website!</h1>
     <p>Hi, I'm Mark. I'm on a new journey to become a backend and eventually a full stack developer!</p
     <p>This portfolio showcases my backend development journey. Check out the <a href="/projects">Projects</a> section to see what I’ve built!</p>
-    <p>You can also <a href="/contact"></a> me for improvements, tips and tricks!</p>
+    <p>You can also <a href="/contact">Contact</a> me for improvements, tips and tricks!</p>
 
     <footer>
         <p>&copy; 2025 Mark Kalotai</p>
