Add Coursera badges to About page

--- a/templates/about.html
+++ b/templates/about.html
@@ -30,10 +30,9 @@
     </p>
 
      <!-- Coursera Badges Section -->
-     <h2>My Coursera Badges</h2>
+     <h2>My Learning Certificates</h2>
      <div class="badge-container">
-         <img src="{{ url_for('static', filename='coursera_python_badge.png') }}" alt="Python Badge">
-         <img src="{{ url_for('static', filename='coursera_backend_badge.png') }}" alt="Backend Development Badge">
+         <img src="{{ url_for('static', filename='IBM_certificate_.png') }}" alt="IBM Badge">
      </div>
 
     <nav>
