Add Coursera badges to About page

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     </nav>
     <h1>Welcome to My Portfolio Website!</h1>
     <p>Hi, I'm Mark. I'm on a new journey to become a backend and eventually a full stack developer!</p>
-    <p>This portfolio showcases my backend development journey. Check out the <a href="/projects">Projects</a> section to see what I’ve built!</p>
+    <p>This portfolio showcases my backend development journey. Check out the <a href="/projects">Projects</a> section to see what I’m working on!</p>
     <p>You can also <a href="/contact">Contact</a> me for improvements, tips and tricks!</p>
 
     <footer>
