Replace certificate with resized image

--- a/static/style.css
+++ b/static/style.css
@@ -146,6 +146,10 @@ nav a:hover {
 .download-btn:hover {
     background-color: #555;
 }
+.certificate-container {
+    text-align: center;
+    margin: 20px auto;
+    
 .certificate-container img {
     max-width: 70%;
     height: auto;
