--- a/static/style.css
+++ b/static/style.css
@@ -151,8 +151,10 @@ nav a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px auto;
+    height: 80vh; 
+    margin: 0 auto;
 }
+
 .certificate-container img {
     max-width: 70%;
     height: auto;
