Fully center certificate image

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,9 +31,9 @@
 
      <!-- Coursera Badges Section -->
      <h2>My Learning Certificates</h2>
-     <div class="badge-container">
-         <img src="{{ url_for('static', filename='IBM_certificate_.png') }}" alt="IBM Badge">
-     </div>
+     <div class="certificate-container">
+        <img src="{{ url_for('static', filename='IBM_certificate_.png') }}" alt="IBM Certificate">
+    </div>
 
     <nav>
         <a href="{{ url_for('home') }}">Home</a> |
