--- a/templates/about.html
+++ b/templates/about.html
@@ -16,23 +16,31 @@
     </nav>
     <h1>About Me</h1>
 
-    <p>Hello, I'm Mark! I'm a passionate backend developer in the making. Below, you can view or download my most recent CV.</p>
+    <p>Hello, I'm Mark! I'm a passionate Software Engineer in the making. Below, you can view or download my most recent CV as well as my Certificates.</p>
 
-    <!-- Embed the PDF viewer -->
+    <!-- PDF -->
     <h2>My CV</h2>
     <div class="pdf-container">
         <embed src="{{ url_for('static', filename='Mark_Kalotai_CV.pdf') }}" type="application/pdf" width="100%" height="600px">
     </div>
 
-    <!-- Download link for the CV -->
+
     <p style="text-align: center;">
         <a class="download-btn" href="{{ url_for('static', filename='Mark_Kalotai_CV.pdf') }}" download>📄 Download My CV</a>
     </p>
 
-     <!-- Coursera Badges Section -->
+     <!-- Certificates -->
      <h2>My Learning Certificates</h2>
      <div class="certificate-container">
         <img src="{{ url_for('static', filename='IBM_certificate_.png') }}" alt="IBM Certificate">
+    </div>
+
+    <div class="certificate-container">
+        <img src="{{ url_for('static', filename='frontend_.png') }}" alt="Frontend Certificate">
+    </div>
+
+    <div class="certificate-container">
+        <img src="{{ url_for('static', filename='backend_.png') }}" alt="Backend Certificate">
     </div>
 
     <nav>
