Fix image paths for certificates

--- a/templates/about.html
+++ b/templates/about.html
@@ -36,11 +36,11 @@
     </div>
 
     <div class="certificate-container">
-        <img src="{{ url_for('static', filename='frontend_.png') }}" alt="Frontend Certificate">
+        <img src="{{ url_for('static', filename='frontend.png') }}" alt="Frontend Certificate">
     </div>
 
     <div class="certificate-container">
-        <img src="{{ url_for('static', filename='backend_.png') }}" alt="Backend Certificate">
+        <img src="{{ url_for('static', filename='backend.png') }}" alt="Backend Certificate">
     </div>
 
     <nav>
