--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,11 @@
      <h2>My Learning Certificates</h2>
      <div class="certificate-container">
         <img src="{{ url_for('static', filename='IBM_certificate_.png') }}" alt="IBM Certificate">
+    </div>
+    <div class="certificate-container1">
         <img src="{{ url_for('static', filename='frontend.png') }}" alt="Frontend Certificate">
+    <div>
+    <div class="certificate-container2">
         <img src="{{ url_for('static', filename='backend.png') }}" alt="Backend Certificate">
     </div>
 
