--- a/templates/about.html
+++ b/templates/about.html
@@ -34,20 +34,14 @@
      <div class="certificate-container">
         <img src="{{ url_for('static', filename='IBM_certificate_.png') }}" alt="IBM Certificate">
     </div>
-    <div class="certificate-container1">
+    
+    <div class="certificate-container">
         <img src="{{ url_for('static', filename='frontend.png') }}" alt="Frontend Certificate">
-    <div>
-    <div class="certificate-container2">
+    </div>
+    
+    <div class="certificate-container">
         <img src="{{ url_for('static', filename='backend.png') }}" alt="Backend Certificate">
     </div>
-
-    <nav>
-        <a href="{{ url_for('home') }}">Home</a> |
-        <a href="{{ url_for('about') }}">About</a> |
-        <a href="{{ url_for('projects') }}">Projects</a> |
-        <a href="{{ url_for('contact') }}">Contact</a> |
-        <a href="{{ url_for('messages') }}">Messages</a>
-    </nav>
 
     <footer>
         <p>&copy; 2025 Mark Kalotai</p>
