--- a/static/style.css
+++ b/static/style.css
@@ -80,7 +80,7 @@ ul {
 }
 
 li {
-    background-color: #fff;
+    background-color: #333;
     margin: 10px auto;
     padding: 20px;
     max-width: 600px;
@@ -107,7 +107,7 @@ nav {
 }
 
 nav a {
-    color: white;
+    color: fff;
     text-decoration: none;
     margin: 0 15px;
     font-weight: bold;
