Fix styles and push latest working version

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 <section>
     <h2>About Me</h2>
-    <p>Welcome to my personal portfolio website! Here, you can learn more about me, explore my projects, and get in touch.</p>
+    <p class="centered-text">Welcome to my personal portfolio website! Here, you can learn more about me, explore my projects, and get in touch.</p>
 </section>
 
 <footer>
